--- a/404.md
+++ b/404.md
@@ -1,3 +1,4 @@
 ---
 permalink: /404.html
 ---
+<iframe width="707" height="480" src="https://www.youtube.com/embed/tfUjl4owxTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
